kubernetes/apps/spliit/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spliit
  labels:
    backups.kalexlab.xyz/use: "true"
