kubernetes/apps/spliit/manifests/spliit.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spliit
  labels:
    kalexlab.xyz/app: spliit
    kalexlab.xyz/component: spliit
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    kalexlab.xyz/app: spliit
    kalexlab.xyz/component: spliit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spliit
  labels:
    kalexlab.xyz/app: spliit
    kalexlab.xyz/component: spliit
spec:
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: spliit
      kalexlab.xyz/component: spliit
  template:
    metadata:
      labels:
        kalexlab.xyz/app: spliit
        kalexlab.xyz/component: spliit
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: spliit
          image: ghcr.io/spliit-app/spliit:1.29.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /api/health/readiness
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health/liveness
              port: http
            periodSeconds: 10
            failureThreshold: 4
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: next-cache
              mountPath: /usr/app/.next/cache
      securityContext:
        runAsNonRoot: true
        runAsUser: 65535
        runAsGroup: 65535
        fsGroup: 65535
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: next-cache
          emptyDir:
            sizeLimit: 1Gi
